tests/inputs/invalid/syntax/g.crbc
routine main () : integer is
    var x : integer is 20;
    var y : integer is 15;
    var gcd : integer is 1;

    for i : integer in 1 .. x loop
        if (x % i = 0 and y % i = 0) then
            gcd := i;
        end
    end

    printeger(gcd);
    
   return 0;
end